eric-bored upgrading the application to Spring Boot 3 and Java 17