@@ -1,24 +1,23 @@
 package com.bravo.user.controller;
 
 import com.bravo.user.App;
-import com.bravo.user.dao.model.User;
 import com.bravo.user.model.dto.UserReadDto;
-import com.bravo.user.model.filter.UserFilter;
 import com.bravo.user.service.UserService;
 import com.bravo.user.utility.PageUtil;
 import java.util.List;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
-import javax.servlet.http.HttpServletResponse;
+import jakarta.servlet.http.HttpServletResponse;
+
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.Mock;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.data.domain.PageRequest;
+import org.springframework.test.annotation.DirtiesContext;
 import org.springframework.test.context.ContextConfiguration;
 import org.springframework.test.context.junit.jupiter.SpringExtension;
 import org.springframework.test.web.servlet.MockMvc;
@@ -35,6 +34,7 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 
 @ContextConfiguration(classes = {App.class})
 @ExtendWith(SpringExtension.class)
+@DirtiesContext
 @SpringBootTest()
 @AutoConfigureMockMvc
 class UserControllerTest {
@@ -48,11 +48,11 @@ class UserControllerTest {
   private List<UserReadDto> users;
 
   @BeforeEach
-  public void beforeEach(){
+  void beforeEach(){
     final List<Integer> ids = IntStream
         .range(1, 10)
         .boxed()
-        .collect(Collectors.toList());
+        .toList();
 
     this.users = ids.stream()
         .map(id -> createUserReadDto(Integer.toString(id)))
